# xcb-proto

./: Makefile.am  configure.ac  meson.build  meson_options.txt  setup.py
src/: meson.build
